force-app/main/default/objects/Lead/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Account Record Type to be converted</description>
    <inlineHelpText>Account Record Type to be converted</inlineHelpText>
    <label>Account Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>