force-app/main/default/objects/Lead/fields/Account_Type_Webform__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Webform__c</fullName>
    <description>Provided through webform News Subscription Contact Category field</description>
    <inlineHelpText>Provided through webform News Subscription Contact Category field</inlineHelpText>
    <label>Account Type Webform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>