force-app/main/default/objects/Lead/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Made to be used for email template</description>
    <formula>ConvertedAccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>