force-app/main/default/objects/Lead/fields/Annual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quantity__c</fullName>
    <inlineHelpText>Planned annual volume with project. Copied to Opportunity field Annual Quantity.</inlineHelpText>
    <label>Planned Annual Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>