force-app/main/default/objects/Lead/fields/Application_Type_Copy__c.field-meta.xml
<CustomField>
    <fullName>Application_Type_Copy__c</fullName>
    <description>Made to import to Opportunity, to be copied with workflow</description>
    <inlineHelpText>Made to import to Opportunity, to be copied with workflow</inlineHelpText>
    <label>Application Type Copy</label>
    <length>200</length>
    <type>Text</type>
</CustomField>