force-app/main/default/objects/Lead/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Used this for RFPD distributor, these are the area&apos;s where RFPD is working</description>
    <inlineHelpText>RFPD contact person area of operations</inlineHelpText>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RFPD_Contact__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>RFPD_Area</valueSetName>
    </valueSet>
</CustomField>