force-app/main/default/objects/Lead/fields/AssistNow_Temporary_Token__c.field-meta.xml
<CustomField>
    <fullName>AssistNow_Temporary_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Token to be generated automatically and populated here through the webform submission (with Apex Trigger)</description>
    <inlineHelpText>Token to be generated automatically and populated here through the webform submission (with Apex Trigger)</inlineHelpText>
    <label>AssistNow Temporary Token</label>
    <length>22</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>