force-app/main/default/objects/Lead/fields/AssistNow_Temporary_Token_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>AssistNow_Temporary_Token_Valid_Until__c</fullName>
    <description>Added when the token is generated (with the workflow rule)</description>
    <inlineHelpText>Added when the token is generated (with the workflow rule)</inlineHelpText>
    <label>AssistNow Temporary Token Valid Until</label>
    <type>Date</type>
</CustomField>