force-app/main/default/objects/Lead/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Lead should receive the Catalog by post mail.</description>
    <inlineHelpText>Check if Lead should receive the Catalog by post mail.</inlineHelpText>
    <label>Catalog</label>
    <type>Checkbox</type>
</CustomField>