force-app/main/default/objects/Lead/fields/CC_expiry__c.field-meta.xml
<CustomField>
    <fullName>CC_expiry__c</fullName>
    <description>Credit expiration date. Made for M2M Seminar registration.</description>
    <inlineHelpText>Visible only for Sales Admin. Used for CDMA M2M Seminar registration in US.</inlineHelpText>
    <label>CC Expiry</label>
    <length>8</length>
    <type>Text</type>
</CustomField>