force-app/main/default/objects/Lead/fields/CC_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Holder_Name__c</fullName>
    <description>Credit holder name. Made for M2M Seminar registration.</description>
    <inlineHelpText>Visible only for Sales Admin. Used for CDMA M2M Seminar registration in US.</inlineHelpText>
    <label>CC Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>