force-app/main/default/objects/Lead/fields/CC_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Number__c</fullName>
    <description>Credit card number. Made for M2M Seminar registration.</description>
    <inlineHelpText>Visible only for Sales Admin. Used for CDMA M2M Seminar registration in US.</inlineHelpText>
    <label>CC Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>