force-app/main/default/objects/Lead/fields/CC_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Type__c</fullName>
    <description>Credit card type. Made for M2M Seminar registration.</description>
    <inlineHelpText>Visible only for Sales Admin. Used for CDMA M2M Seminar registration in US.</inlineHelpText>
    <label>CC Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>