force-app/main/default/objects/Lead/fields/Change_Notification__c.field-meta.xml
<CustomField>
    <fullName>Change_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Notifications</label>
    <type>Checkbox</type>
</CustomField>