force-app/main/default/objects/Lead/fields/CloudLocate_Redemption_Code__c.field-meta.xml
<CustomField>
    <fullName>CloudLocate_Redemption_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>CloudLocate Redemption Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>