force-app/main/default/objects/Lead/fields/CM__c.field-meta.xml
<CustomField>
    <fullName>CM__c</fullName>
    <inlineHelpText>Manufacturing partner</inlineHelpText>
    <label>CM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>