force-app/main/default/objects/Lead/fields/CM_Country__c.field-meta.xml
<CustomField>
    <fullName>CM_Country__c</fullName>
    <label>CM Country</label>
    <length>12</length>
    <type>Text</type>
</CustomField>