force-app/main/default/objects/Lead/fields/Company_Name_Local_Language__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Local_Language__c</fullName>
    <inlineHelpText>Company name in local language</inlineHelpText>
    <label>Company Name (Local Language)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>