force-app/main/default/objects/Lead/fields/Company_Webform__c.field-meta.xml
<CustomField>
    <fullName>Company_Webform__c</fullName>
    <description>Company name given in the webform. Made to enter the actual company name so Company field can be used for webform submission without filling it.</description>
    <inlineHelpText>Company name given in the webform. Made to enter the actual company name so Company field can be used for webform submission without filling it.</inlineHelpText>
    <label>Company Webform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>