force-app/main/default/objects/Lead/fields/Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type__c</fullName>
    <description>Contact Record Type to be converted</description>
    <inlineHelpText>Contact Record Type to be converted</inlineHelpText>
    <label>Contact Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>