force-app/main/default/objects/Lead/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>From webform, to be copied to Contact: Role</description>
    <inlineHelpText>From webform, to be copied to Contact: Role</inlineHelpText>
    <label>Contact Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>