force-app/main/default/objects/Lead/fields/Current_GPS_Qty__c.field-meta.xml
<CustomField>
    <fullName>Current_GPS_Qty__c</fullName>
    <inlineHelpText>Current annual GPS volume. Copied to Opportunity.</inlineHelpText>
    <label>Current GPS Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>