force-app/main/default/objects/Lead/fields/Current_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Current_Suppliers__c</fullName>
    <inlineHelpText>From Project Information Form (if Lead is generated through that form). Copied to Opportunity.</inlineHelpText>
    <label>Current Suppliers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>