force-app/main/default/objects/Lead/fields/Current_Wireless_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Current_Wireless_Carrier__c</fullName>
    <description>Made for M2M roadshow with Sprint and Taoglas</description>
    <inlineHelpText>Leave empty for now.</inlineHelpText>
    <label>Current Wireless Carrier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>