force-app/main/default/objects/Lead/fields/Current_Wireless_Qty__c.field-meta.xml
<CustomField>
    <fullName>Current_Wireless_Qty__c</fullName>
    <inlineHelpText>Current annual wireless quantity. Copied to Opportunity.</inlineHelpText>
    <label>Current Wireless Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>