force-app/main/default/objects/Lead/fields/Current_Wireless_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Wireless_Supplier__c</fullName>
    <inlineHelpText>Copied to Opportunity.</inlineHelpText>
    <label>Current Wireless Supplier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>