force-app/main/default/objects/Lead/fields/Date_Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_Invalid__c</fullName>
    <inlineHelpText>Date when the Email address has been defined as invalid by ExactTarget</inlineHelpText>
    <label>Date Email Invalid</label>
    <type>Date</type>
</CustomField>