force-app/main/default/objects/Lead/fields/Date_Production__c.field-meta.xml
<CustomField>
    <fullName>Date_Production__c</fullName>
    <inlineHelpText>Planned start of mass production. Copied to Opportunity.</inlineHelpText>
    <label>Date Production</label>
    <type>Date</type>
</CustomField>