force-app/main/default/objects/Lead/fields/Date_Prototype__c.field-meta.xml
<CustomField>
    <fullName>Date_Prototype__c</fullName>
    <inlineHelpText>Planned start of prototyping. Copied to Opportunity field Proto Date.</inlineHelpText>
    <label>Date Prototype</label>
    <type>Date</type>
</CustomField>