force-app/main/default/objects/Lead/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <formula>CreatedDate</formula>
    <inlineHelpText>Custom field with date of creation. Allows conversion of info to opportunity.</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>