force-app/main/default/objects/Lead/fields/Design_House__c.field-meta.xml
<CustomField>
    <fullName>Design_House__c</fullName>
    <inlineHelpText>Design-house of project</inlineHelpText>
    <label>Design House</label>
    <length>40</length>
    <type>Text</type>
</CustomField>