force-app/main/default/objects/Lead/fields/Design_House_Country__c.field-meta.xml
<CustomField>
    <fullName>Design_House_Country__c</fullName>
    <label>Design House Country</label>
    <length>12</length>
    <type>Text</type>
</CustomField>