force-app/main/default/objects/Lead/fields/Distributor_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Company_Name__c</fullName>
    <label>Distribution Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Distribution_Partner</valueSetName>
    </valueSet>
</CustomField>