force-app/main/default/objects/Lead/fields/DK_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>DK_Invoice_Date__c</fullName>
    <description>(From Digi-Key order)</description>
    <inlineHelpText>(From Digi-Key order)</inlineHelpText>
    <label>DK Invoice Date</label>
    <type>Date</type>
</CustomField>