force-app/main/default/objects/Lead/fields/DK_Product__c.field-meta.xml
<CustomField>
    <fullName>DK_Product__c</fullName>
    <description>(From Digi-Key order)</description>
    <inlineHelpText>(From Digi-Key order)</inlineHelpText>
    <label>DK Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>