force-app/main/default/objects/Lead/fields/DK_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DK_Quantity__c</fullName>
    <description>(From Digi-Key order)</description>
    <inlineHelpText>(From Digi-Key order)</inlineHelpText>
    <label>DK Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>