force-app/main/default/objects/Lead/fields/DK_Total_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>DK_Total_Value_USD__c</fullName>
    <description>(From Digi-Key order)</description>
    <inlineHelpText>(From Digi-Key order)</inlineHelpText>
    <label>DK Total Value USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>