force-app/main/default/objects/Lead/fields/DOQ__c.field-meta.xml
<CustomField>
    <fullName>DOQ__c</fullName>
    <label>DOQ#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>