force-app/main/default/objects/Lead/fields/Duplicate_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Record_Id__c</fullName>
    <description>Save the duplicate record id from the hubspot</description>
    <label>Duplicate Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>