force-app/main/default/objects/Lead/fields/Email_address_probably_invalid__c.field-meta.xml
<CustomField>
    <fullName>Email_address_probably_invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be activated if the e-mail address was rejected during a campaign.
Please check the e-mail address and possibly contact the customer, then clear
the checkbox.</description>
    <label>Email invalid</label>
    <type>Checkbox</type>
</CustomField>