force-app/main/default/objects/Lead/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <inlineHelpText>End customer for this project</inlineHelpText>
    <label>End Customer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>