force-app/main/default/objects/Lead/fields/End_Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Country__c</fullName>
    <label>End Customer Country</label>
    <length>12</length>
    <type>Text</type>
</CustomField>