force-app/main/default/objects/Lead/fields/Event_email__c.field-meta.xml
<CustomField>
    <fullName>Event_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscribe to Event email</description>
    <inlineHelpText>Subscribe to Event email</inlineHelpText>
    <label>Event email</label>
    <type>Checkbox</type>
</CustomField>