force-app/main/default/objects/Lead/fields/Event_place_and_date__c.field-meta.xml
<CustomField>
    <fullName>Event_place_and_date__c</fullName>
    <description>Made for M2M roadshow with Sprint and Taoglas</description>
    <inlineHelpText>Leave empty for now.</inlineHelpText>
    <label>Event place and date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>