force-app/main/default/objects/Lead/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Add if Lead Source is Trade Show</description>
    <inlineHelpText>Add if Lead Source is Trade Show</inlineHelpText>
    <label>Exhibition</label>
    <referenceTo>Exhibition__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>