force-app/main/default/objects/Lead/fields/Fields_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Fields_Of_Interest__c</fullName>
    <description>From webform News Subscription, to update relevant checkbox (Financial News, Product News)</description>
    <inlineHelpText>From webform News Subscription, to update relevant checkbox (Financial News, Product News)</inlineHelpText>
    <label>Fields Of Interest</label>
    <length>50</length>
    <type>Text</type>
</CustomField>