force-app/main/default/objects/Lead/fields/Financial_News__c.field-meta.xml
<CustomField>
    <fullName>Financial_News__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From webform News Subscription via Field Of Interest, to be converted to Contact: Financial News</description>
    <inlineHelpText>From webform News Subscription via Field Of Interest, to be converted to Contact: Financial News</inlineHelpText>
    <label>Financial News</label>
    <type>Checkbox</type>
</CustomField>