force-app/main/default/objects/Lead/fields/GPS_ASP__c.field-meta.xml
<CustomField>
    <fullName>GPS_ASP__c</fullName>
    <inlineHelpText>Expected ASP for GPS product</inlineHelpText>
    <label>GPS ASP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>