force-app/main/default/objects/Lead/fields/GPS_Product__c.field-meta.xml
<CustomField>
    <fullName>GPS_Product__c</fullName>
    <inlineHelpText>GPS product of interest</inlineHelpText>
    <label>GPS Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>