force-app/main/default/objects/Lead/fields/HB_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>HB_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the form is submitted again</description>
    <label>HB Duplicate?</label>
    <type>Checkbox</type>
</CustomField>