force-app/main/default/objects/Lead/fields/I_will_take_the_connecting_bus__c.field-meta.xml
<CustomField>
    <fullName>I_will_take_the_connecting_bus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bus option.</description>
    <inlineHelpText>u-blox will provide a connecting bus service to the event from electronica.</inlineHelpText>
    <label>I will take the connecting bus</label>
    <type>Checkbox</type>
</CustomField>