force-app/main/default/objects/Lead/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language of communication material</description>
    <inlineHelpText>Language of communication material</inlineHelpText>
    <label>Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>JA</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
            <value>
                <fullName>ZH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>