force-app/main/default/objects/Lead/fields/Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted__c</fullName>
    <description>This is simply a flag which will always generate True but just in case if lead is getting converted. As this is going to be used in the Lead to Contact fields mapping.</description>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Converted</label>
    <type>Checkbox</type>
</CustomField>