force-app/main/default/objects/Lead/fields/Lead_Received__c.field-meta.xml
<CustomField>
    <fullName>Lead_Received__c</fullName>
    <description>If empty, a workflow sets the field to be equal to the Lead create date</description>
    <inlineHelpText>Date of Lead creation. Typically 1 to 7 days later than actual ship date.</inlineHelpText>
    <label>Shop Order Ship Date</label>
    <type>Date</type>
</CustomField>