force-app/main/default/objects/Lead/fields/Lead_Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that introduced this Lead. Add if Lead Source is Partner.
Transferred to Opportunity and Partner Role.</description>
    <inlineHelpText>Account that introduced this Lead. Add if Lead Source is Partner.
Transferred to Opportunity and Partner Role.</inlineHelpText>
    <label>Lead Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>