force-app/main/default/objects/Lead/fields/Lead_Source_Copy__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Copy__c</fullName>
    <formula>text( LeadSource )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy of the lead source for the conversion to the account</inlineHelpText>
    <label>Lead Source Copy</label>
    <type>Text</type>
</CustomField>