force-app/main/default/objects/Lead/fields/Lead_Source_Person__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person (Salesforce Contact) who introduced this Lead. Transferred to Opportunity.</description>
    <inlineHelpText>Person (Salesforce Contact) who introduced this Lead. Transferred to Opportunity.</inlineHelpText>
    <label>Lead Source Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>