force-app/main/default/objects/Lead/fields/Lead_Source_Person_User__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Person_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person (Salesforce User) who introduced this Lead. Transferred to Opportunity.</description>
    <inlineHelpText>Person (Salesforce User) who introduced this Lead. Transferred to Opportunity.</inlineHelpText>
    <label>Lead Source Person (User)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>