force-app/main/default/objects/Lead/fields/Lead_Source_Webform_Copy__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Webform_Copy__c</fullName>
    <description>Added to map to Contact</description>
    <inlineHelpText>Added to map to Contact</inlineHelpText>
    <label>Lead Source Webform Copy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source_Webform</valueSetName>
    </valueSet>
</CustomField>