force-app/main/default/objects/Lead/fields/Linked_Case__c.field-meta.xml
<CustomField>
    <fullName>Linked_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is for creating the relationship between case and lead. We need this for the Customer Community requirement. In which we wanted to keep the case reference when we&apos;ll ask the user to fill and submit the PIF through website.</description>
    <label>Linked Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Leads Linked with Portal Cases</relationshipLabel>
    <relationshipName>LeadsLinkedCases</relationshipName>
    <type>Lookup</type>
</CustomField>