force-app/main/default/objects/Lead/fields/Market_Classification__c.field-meta.xml
<CustomField>
    <fullName>Market_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Market Segment is successor of Application Type field. To select right value, search for keywords and choose the value which best fits this lead.</inlineHelpText>
    <label>Market Segment Selection</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Market_Classification__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Select &quot;All Fields&quot; checkbox bellow the Search field to see all possible Market Segments!</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Market_Classification__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>