force-app/main/default/objects/Lead/fields/Market_OLD__c.field-meta.xml
<CustomField>
    <fullName>Market_OLD__c</fullName>
    <inlineHelpText>DO NOT USE. Market segment. Copied to Account and Opportunity.</inlineHelpText>
    <label>Market (OLD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>