force-app/main/default/objects/Lead/fields/Marketing_Communication_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Communication_Opt_Out__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marketing Communication Opt-out field to sync with Hubspot and mapped with Contact.</description>
    <inlineHelpText>The Lead has unsubscribed from all kind of marketing communications.</inlineHelpText>
    <label>Marketing Communication Opt Out</label>
    <type>Checkbox</type>
</CustomField>